EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Attendance_Event__c/fields/hed__Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>hed__Arrival_Time__c</fullName>
    <description>The time a tardy student arrived.</description>
    <inlineHelpText>La hora en la que llegó un estudiante impuntual.</inlineHelpText>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>