EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Attendance_Event__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student who&apos;s tardy or absent.</description>
    <inlineHelpText>El estudiante que es impuntual o ausente.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendance Events</relationshipLabel>
    <relationshipName>Attendance_Events</relationshipName>
    <type>Lookup</type>
</CustomField>