EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Attendance_Event__c/fields/hed__Course_Name__c.field-meta.xml
<CustomField>
    <fullName>hed__Course_Name__c</fullName>
    <description>The name of the Course in which the student was tardy or absent (read-only).</description>
    <formula>hed__Course_Connection__r.hed__Course_Offering__r.hed__Course__r.Name</formula>
    <inlineHelpText>El nombre del curso en el que el estudiante fue impuntual o estuvo ausente (solo lectura).</inlineHelpText>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>