EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Attendance_Event__c/fields/hed__End_Time__c.field-meta.xml
<CustomField>
    <fullName>hed__End_Time__c</fullName>
    <description>For a partial-day excused absence, the time the student returned.</description>
    <inlineHelpText>Para una ausencia justificada parcial, la hora a la que se presentó el estudiante.</inlineHelpText>
    <label>End Time</label>
    <type>Time</type>
</CustomField>