EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Attendance_Event__c/fields/hed__Reason__c.field-meta.xml
<CustomField>
    <fullName>hed__Reason__c</fullName>
    <description>Select an option that most closely matches the reason the student was absent or tardy. Use the Reason Description field to enter more details.</description>
    <inlineHelpText>Seleccione una opción que se ajuste con más precisión al motivo por el que el estudiante fue impuntual o estuvo ausente. Utilice el campo Descripción de motivo para ingresar más detalles.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Religious</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>