EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Attendance_Event__c/fields/hed__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>hed__Start_Time__c</fullName>
    <description>For a partial-day excused absence, the time the student left school.</description>
    <inlineHelpText>Para una ausencia justificada parcial, la hora a la que el estudiante abandonó la institución educativa.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>